examples/sample-product-chart/chart-test/reports/dist/run-bats-f17-3-containers-70694/labels-on/artifacts/manifests/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      meta.helm.sh/release-name: sample
      meta.helm.sh/release-namespace: sample
    creationTimestamp: "2026-06-05T14:11:29Z"
    generation: 1
    labels:
      app: sample
      app.kubernetes.io/managed-by: Helm
    name: sample
    namespace: sample
    resourceVersion: "468"
    uid: fb096978-dc64-4c7a-aeae-bce23769f01b
  spec:
    ingressClassName: nginx
    rules:
    - http:
        paths:
        - backend:
            service:
              name: sample
              port:
                number: 80
          path: /
          pathType: Prefix
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
